--- a/compra/src/main/resources/application-test.properties
+++ b/compra/src/main/resources/application-test.properties
@@ -15,3 +15,12 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
 server.port=8080
+
+
+# RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+
+queue.name=COMPRA_EFETUADA
