--- a/compra/src/main/resources/application-test.properties
+++ b/compra/src/main/resources/application-test.properties
@@ -18,7 +18,7 @@ server.port=8080
 
 
 # RabbitMQ
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
