--- a/workercompras/pom.xml
+++ b/workercompras/pom.xml
@@ -32,6 +32,12 @@
 			<version>1.6.7</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- SendGrid -->
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.4.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
