--- a/workercompras/src/main/resources/application.properties
+++ b/workercompras/src/main/resources/application.properties
@@ -9,11 +9,10 @@ spring.rabbitmq.password=admin
 queue.name=COMPRA_EFETUADA
 
 
-## Config Gmail ##
+## Config Email sendgrig ##
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${GMAIL_USER}
-spring.mail.password=${GMAIL_PASS}
+spring.mail.username= wanderson9100@outlook.com
+spring.sendgrid.api-key=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
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
