--- a/workercompras/src/main/resources/application.properties
+++ b/workercompras/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#API ViaCep
+viacep=https://viacep.com.br/ws/
+
+Logging.level.com.workercompras.repository.*=DEBUG
