Regras de validação

--- a/workercompras/src/main/resources/application.properties
+++ b/workercompras/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=0
 
 # RabbitMQ
 spring.rabbitmq.host=localhost
@@ -6,7 +6,9 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
 
+# Filas
 queue.name=COMPRA_EFETUADA
+queue.compra-pendente=COMPRA_PENDENTE
 
 
 ## Config Email sendgrig ##
@@ -27,3 +29,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 viacep=https://viacep.com.br/ws/
 
 Logging.level.com.workercompras.repository.*=DEBUG
+
+
