Ajuste de excessões

--- a/validador/src/main/resources/application.properties
+++ b/validador/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
+
+## Config Email sendgrig ##
+spring.mail.host=smtp.gmail.com
+spring.mail.username= wanderson9100@outlook.com
+spring.sendgrid.api-key=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
