--- a/compra/src/main/resources/application-test.properties
+++ b/compra/src/main/resources/application-test.properties
@@ -19,7 +19,7 @@ server.port=8080
 
 
 # RabbitMQ
-spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
