--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   tests:
-
+    name: Run Unit Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -21,3 +21,31 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B test --file ./compra/pom.xml
+
+  build:
+    needs: tests
+    name: Build maven package
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Cache local Maven repository
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('./compra/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+      - name: Build with Maven
+        run: mvn -B package -DskipeTests --file ./compra/pom.xml
+      - name: Upload .war
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifact
+          path: ./compra/target/app.war
