--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,10 +40,9 @@ jobs:
         with:
           path: ~/.m2
           key: ${{ runner.os }}-maven-${{ hashFiles('./compra/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
-      - name: Build with Maven
-        run: mvn -B package -DskipeTests --file ./compra/pom.xml
+          restore-keys: ${{ runner.os }}-maven-
+      - name: Build package war
+        run: mvn -B package -DskipTests --file ./compra/pom.xml
       - name: Upload .war
         uses: actions/upload-artifact@v2
         with:
