--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -66,6 +66,6 @@ jobs:
           wait_for_environment_recovery: 120
           application_name: app-spring-boot
           environment_name: App-spring-boot-env
-          version_label: ${{ github.SHA }}
+          version_label: ${{ github.sha }}
           region: "us-east-1"
           deployment_package: app.war
