--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -68,7 +68,7 @@ jobs:
           aws elasticbeanstalk create-environment \
             --application-name app-spring-boot \
             --environment-name app-spring-boot-env \
-            --solution-stack-name "Corretto 11 running on 64bit Amazon Linux 2"
+            --solution-stack-name "64bit Amazon Linux 2 v3.4.8 running Corretto"
       - name: Deploy to AWS Elastic Beanstalk
         run: |
           aws elasticbeanstalk create-environment \
