--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,15 +12,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: maven
-      - name: Build with Maven
-        run: mvn -B test --file ./compra/pom.xml
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B test --file ./compra/pom.xml
 
   build:
     needs: tests
@@ -57,21 +57,15 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: artifact
-      - name: Set up AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v15
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: "us-east-1"
-      - name: Create AWS Elastic Beanstalk Environment
-        run: |
-          aws elasticbeanstalk create-environment \
-            --application-name app-spring-boot \
-            --environment-name app-spring-boot-env \
-            --solution-stack-name "64bit Amazon Linux 2 v3.4.8 running Corretto"
-      - name: Deploy to AWS Elastic Beanstalk
-        run: |
-          aws elasticbeanstalk create-environment \
-            --application-name app-spring-boot \
-            --environment-name app-spring-boot-env \
-            --version-label ${{ github.sha }}
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          use_existing_version_if_available: true
+          wait_for_environment_recovery: 120
+          application_name: app-spring-boot
+          environment_name: app-spring-boot-env
+          version_label: ${{ github.sha }}
+          region: "us-east-1"
+          deployment_package: app.war
